[gd_scene load_steps=6 format=3 uid="uid://c258t6ukqdor4"]

[ext_resource type="Script" uid="uid://ddj76dh0xede3" path="res://src/entities/player/Echo.gd" id="1"]
[ext_resource type="Script" uid="uid://ct22reiy4cvnd" path="res://src/core/HealthComponent.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bkggsdr77coqf" path="res://scenes/EchoAnimatedSprite.tscn" id="3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 25.0

[node name="Echo" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1")

[node name="EchoAnimatedSprite" parent="." instance=ExtResource("3")]
position = Vector2(0, -50)
animation = &"idle"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -50)
limit_left = 0
limit_bottom = 600
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_1")

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2(0, -15)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_2")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -40.0
grow_vertical = 0

[node name="Background" type="ColorRect" parent="UI/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 0.8)

[node name="ForegroundBar" type="ColorRect" parent="UI/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.6, 0.1, 1)

[node name="Label" type="Label" parent="UI/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1
